--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "dev": "nodemon --config",
-    "start": "npm run build && NODE_ENV=production node build",
+    "start": "NODE_ENV=production node build",
     "build": "tsc",
     "smoke": "node smoke",
     "permissions:validate": "ts-node src/db/scripts/allEnvPermissionSync.ts && ts-node src/db/scripts/validatePermissions.ts",
