--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "smoke": "node smoke",
     "permissions:validate": "ts-node src/db/scripts/allEnvPermissionSync.ts && ts-node src/db/scripts/validatePermissions.ts",
     "permissions:print": "ts-node src/db/scripts/allEnvPermissionSync.ts",
-    "deploy:staging": "git checkout master && git pull && git push staging master"
+    "deploy:staging": "git checkout master && git pull && git push staging master",
+    "deploy:production": "git checkout master && git pull && git push production master",
+    "restart:staging": "heroku restart --remote staging",
+    "logs:staging": "heroku logs --tail --remote staging",
+    "logs:production": "heroku logs --tail --remote production"
   },
   "author": "",
   "license": "ISC",
