--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "smoke": "node smoke",
     "permissions:validate": "ts-node src/db/scripts/allEnvPermissionSync.ts && ts-node src/db/scripts/validatePermissions.ts",
     "permissions:print": "ts-node src/db/scripts/allEnvPermissionSync.ts",
+    "permissions:add": "ts-node src/db/scripts/addPermissions.ts",
     "deploy:staging": "git checkout master && git pull && git push staging master",
     "deploy:production": "git checkout master && git pull && git push production master",
     "restart:staging": "heroku restart --remote staging",
@@ -53,7 +54,7 @@
     "morgan": "^1.9.1"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "*.{ts,tsx}": [
       "eslint --max-warnings 0 --ignore-pattern '!.eslintrc.js'",
       "prettier --write"
     ]
