--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "axios": "^0.19.2",
-    "cross-env": "^7.0.2",
-    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
     "jest": "^25.4.0",
@@ -54,7 +52,9 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.3",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
