make lint staged run again

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run permissions:validate && npm run test && lint-staged"
+      "pre-commit": "npm run permissions:validate && lint-staged && npm run test"
     }
   },
   "engines": {
