--- a/package.json
+++ b/package.json
@@ -45,16 +45,18 @@
     "yargs": "^15.3.1"
   },
   "dependencies": {
+    "@types/helmet": "0.0.47",
     "bcrypt": "^4.0.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.3",
-    "morgan": "^1.9.1",
-    "cross-env": "^7.0.2",
-    "dotenv": "^8.2.0"
+    "morgan": "^1.9.1"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
